Fixed a lot of text field and label issues. Added search bar and searching to the app. Added all catholic events in the settings.json.

--- a/assets/languages/eng.json
+++ b/assets/languages/eng.json
@@ -20,5 +20,7 @@
   "recurring": "Recurring:",
   "calendar": "Calendar",
   "profile": "Profile",
-  "settings": "Settings"
+  "settings": "Settings",
+  "search": "Search",
+  "search_events": "Search Events"
 }
