Started working on profile view. Made Google OAuth2 work, so now users can sign in to this app with their Google account. Added user token saving.

--- a/assets/languages/eng.json
+++ b/assets/languages/eng.json
@@ -22,5 +22,7 @@
   "profile": "Profile",
   "settings": "Settings",
   "search": "Search",
-  "search_events": "Search Events"
+  "search_events": "Search Events",
+  "event_appear_message": "Events will appear here...",
+  "sign_in": "Sign in"
 }
