Added settings as a separate class. Fixed hard coded values with the Config class. Started working on the settings view.

--- a/assets/languages/eng.json
+++ b/assets/languages/eng.json
@@ -24,5 +24,11 @@
   "search": "Search",
   "search_events": "Search Events",
   "event_appear_message": "Events will appear here...",
-  "sign_in": "Sign in"
+  "sign_in": "Sign in",
+  "sync": "Sync",
+  "choose_account": "Choose Account",
+  "no_accounts": "No accounts to show.",
+  "add_account": "Add Account",
+  "switch_account": "Switch Account",
+  "sign_out": "Sign Out"
 }
